syntax = "proto3";

package gateway;

// GatewayAddress 网关地址
message GatewayAddress {
    string ip = 1; 
    int32 port = 2;
}

message GetGatewayAddressRequest {

}
message GetGatewayAddressResponse {
    GatewayAddress addr = 1;
}

// AnotherLoginRequest 顶号请求
message AnotherLoginRequest {
    uint64 player_id = 1;
}
// AnotherLoginResponse 顶号应答
message AnotherLoginResponse {}

service GateService {
    rpc GetGatewayAddress(GetGatewayAddressRequest) returns (GetGatewayAddressResponse) {}
    rpc AnotherLogin(AnotherLoginRequest) returns (AnotherLoginResponse) {}
}